--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         .copy-btn img {
             width: 20px;
             height: 20px;
+            transition: opacity 0.3s ease;
         }
 
         .copy-notification {
@@ -161,8 +162,8 @@
         <div class="server-info">
             <h3>Подключение к серверу</h3>
             <p><strong>IP адрес:</strong> <span id="ip-address">e1.aurorix.net:20279</span>
-                <button class="copy-btn" onclick="copyToClipboard()">
-                    <img src="https://cdn.discordapp.com/attachments/1253332984350769202/1325804846720487567/copied-icon.png?ex=677d1f7b&is=677bcdfb&hm=e26e38fe69272db843566fd9edfd8f588ccad55cf474d4a6b15ee32a057ebdb3&" alt="Copy icon">
+                <button class="copy-btn" id="copy-btn" onclick="copyToClipboard()">
+                    <img src="https://cdn.discordapp.com/attachments/1253332984350769202/1325804846720487567/copied-icon.png?ex=677d1f7b&is=677bcdfb&hm=e26e38fe69272db843566fd9edfd8f588ccad55cf474d4a6b15ee32a057ebdb3&" alt="Copy icon" id="copy-icon">
                 </button>
             </p>
             <p>Чтобы присоединиться к нашему серверу, просто нажмите на кнопку ниже:</p>
@@ -195,7 +196,7 @@
             textArea.select();
             document.execCommand("copy");
             document.body.removeChild(textArea);
-            
+
             // Показываем уведомление
             var notification = document.getElementById("copy-notification");
             notification.style.visibility = "visible";
@@ -206,6 +207,13 @@
                 notification.style.opacity = "0";
                 notification.style.visibility = "hidden";
             }, 2000);
+
+            // Изменяем иконку на галочку
+            var copyIcon = document.getElementById("copy-icon");
+            copyIcon.src = "https://cdn.discordapp.com/attachments/1253332984350769202/1325811014742310933/check-mark.png?ex=677d253a&is=677bd3ba&hm=2ea6e745335478cb69fd32a631c5689a05569aab8d1c52d857cfcacc8bb6af7c"; // Поставим галочку
+            setTimeout(function() {
+                copyIcon.src = "https://cdn.discordapp.com/attachments/1253332984350769202/1325804846720487567/copied-icon.png?ex=677d1f7b&is=677bcdfb&hm=e26e38fe69272db843566fd9edfd8f588ccad55cf474d4a6b15ee32a057ebdb3&"; // Возвращаем иконку копирования
+            }, 1000); // Восстанавливаем через 1 секунду
         }
     </script>
 </body>
