--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
     <style>
+        
         * {
             margin: 0;
             padding: 0;
@@ -24,6 +25,22 @@
             flex-direction: column;
             min-height: 100vh;
         }
+        .connect-btn {
+    font-family: 'Montserrat', sans-serif; /* Шрифт сайта */
+    background-color: #8a2be2; /* Фиолетовая кнопка */
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    display: inline-block;
+    margin-top: 20px; /* Отступ сверху */
+    cursor: pointer; /* Указатель при наведении */
+}
+        .connect-btn:hover {
+    background-color: #7a1dcb; /* Более темный фиолетовый при наведении */
+}
         header {
             background-color: #333;
             color: #fff;
