--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
     <style>
-        
         * {
             margin: 0;
             padding: 0;
@@ -26,21 +25,21 @@
             min-height: 100vh;
         }
         .connect-btn {
-    font-family: 'Montserrat', sans-serif; /* Шрифт сайта */
-    background-color: #8a2be2; /* Фиолетовая кнопка */
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    text-decoration: none;
-    font-size: 18px;
-    display: inline-block;
-    margin-top: 20px; /* Отступ сверху */
-    cursor: pointer; /* Указатель при наведении */
-}
+            font-family: 'Montserrat', sans-serif; /* Шрифт сайта */
+            background-color: #8a2be2; /* Фиолетовая кнопка */
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 18px;
+            display: inline-block;
+            margin-top: 20px; /* Отступ сверху */
+            cursor: pointer; /* Указатель при наведении */
+        }
         .connect-btn:hover {
-    background-color: #7a1dcb; /* Более темный фиолетовый при наведении */
-}
+            background-color: #7a1dcb; /* Более темный фиолетовый при наведении */
+        }
         header {
             background-color: #333;
             color: #fff;
@@ -97,31 +96,6 @@
             font-size: 14px;
             border-radius: 10px 10px 0 0;
         }
-        .connect-btn {
-            background-color: #8a2be2; /* Фиолетовая кнопка */
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 10px;
-            text-decoration: none;
-            font-size: 18px;
-            display: inline-block;
-            margin-top: 20px; /* Отступ сверху */
-        }
-        .connect-btn:hover {
-            background-color: #7a1dcb; /* Более темный фиолетовый при наведении */
-        }
-
-        /* Анимация для иконки */
-        @keyframes rotate {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
         .thank-you {
             background-color: #444;
             padding: 20px;
@@ -164,6 +138,36 @@
             transition: opacity 1s ease, visibility 1s ease;
             z-index: 1000;
         }
+
+        .install-notification {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #ff4500;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 18px;
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 1s ease, visibility 1s ease;
+            z-index: 1000;
+            text-align: center;
+        }
+
+        .install-notification button {
+            background-color: #008CBA;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+
+        .install-notification button:hover {
+            background-color: #0077b5;
+        }
     </style>
 </head>
 <body>
@@ -204,6 +208,12 @@
         IP адрес скопирован!
     </div>
 
+    <!-- Уведомление для пользователей, у которых нет Team Fortress -->
+    <div class="install-notification" id="install-notification">
+        <p>У вас нет Team Fortress 2? Установите используя Steam!</p>
+        <button onclick="window.location.href='https://source-servers.vercel.app/TFInstall';">Установить через Steam</button>
+    </div>
+
 <script>
     function copyToClipboard() {
         var copyText = document.getElementById("ip-address");
@@ -240,6 +250,19 @@
                 newTab.close();
             }
         }, 2000); // Закрыть вкладку через 2 секунды
+
+        // Показываем уведомление об отсутствии игры
+        setTimeout(function() {
+            var installNotification = document.getElementById("install-notification");
+            installNotification.style.visibility = "visible";
+            installNotification.style.opacity = "1";
+
+            // Закрываем уведомление через 5 секунд
+            setTimeout(function() {
+                installNotification.style.visibility = "hidden";
+                installNotification.style.opacity = "0";
+            }, 5000);
+        }, 2000); // Показываем уведомление через 2 секунды
     }
 </script>
 </body>
