--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 
     <div class="thank-you">
         <h3>Благодарности</h3>
-        <p><strong>DavuksDev/Donk:</strong> Идея для сайта, сервера, помощь в создании сервера.</p>
+        <p><strong>DavuksDev/Donk:</strong> Идея для сайта, сервера, помощь в создании сервера,сайта.</p>
+        <p><strong>Terry:</strong> Создание сайта, создание сервера.</p>
         <p><strong>Сообщество DProd:</strong> Донаты на Boosty.</p>
     </div>
 
