--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <header>
-        <img src="https://cdn.discordapp.com/attachments/1253332984350769202/1325785968439197706/cdb42ed5138107cb.png?ex=677d0de6&is=677bbc66&hm=079c98b9cfb6983b715e675c02ca91bd0e6197de753538c1142980a92366b593&" alt="TF2 Icon" class="icon">
+        <img src="https://cdn.discordapp.com/attachments/1326873820199391243/1326873899530457098/cdb42ed5138107cb.png?ex=6781031d&is=677fb19d&hm=4347482084b0f0fd88b03a251aaf86fcc583f0718026e5ac9eb53ef47794938f&" alt="TF2 Icon" class="icon">
         <h1>Сервер Team Fortress 2 от DProd LLC</h1>
     </header>
 
@@ -147,7 +147,7 @@
             <h3>Подключение к серверу</h3>
             <p><strong>IP адрес:</strong> <span id="ip-address">e1.aurorix.net:20279</span>
                 <button class="copy-btn" id="copy-btn" onclick="copyToClipboard()">
-                    <img src="https://cdn.discordapp.com/attachments/1253332984350769202/1325804846720487567/copied-icon.png?ex=677d1f7b&is=677bcdfb&hm=e26e38fe69272db843566fd9edfd8f588ccad55cf474d4a6b15ee32a057ebdb3&" alt="Copy icon" id="copy-icon">
+                    <img src="https://cdn.discordapp.com/attachments/1326873820199391243/1326873864000634942/copied-icon.png?ex=67810315&is=677fb195&hm=ec02504a1e11f01658e52f6242fa463edef669e95aab7396ef8229ed0a52b8b4&" alt="Copy icon" id="copy-icon">
                 </button>
             </p>
             <p>Чтобы присоединиться к нашему серверу, просто нажмите на кнопку ниже:</p>
@@ -185,9 +185,9 @@
 
             // Изменяем иконку на галочку
             var copyIcon = document.getElementById("copy-icon");
-            copyIcon.src = "https://cdn.discordapp.com/attachments/1253332984350769202/1325811014742310933/check-mark.png?ex=677d253a&is=677bd3ba&hm=2ea6e745335478cb69fd32a631c5689a05569aab8d1c52d857cfcacc8bb6af7c"; // Поставим галочку
+            copyIcon.src = "https://cdn.discordapp.com/attachments/1326873820199391243/1326873879725080617/check-mark.png?ex=67810319&is=677fb199&hm=81c61dc4db3c5ce94d8846e7bff9f45b04b239abf0a1ee5539fd871c828a57c4&"; // Поставим галочку
             setTimeout(function() {
-                copyIcon.src = "https://cdn.discordapp.com/attachments/1253332984350769202/1325804846720487567/copied-icon.png?ex=677d1f7b&is=677bcdfb&hm=e26e38fe69272db843566fd9edfd8f588ccad55cf474d4a6b15ee32a057ebdb3&"; // Возвращаем иконку копирования
+                copyIcon.src = "https://cdn.discordapp.com/attachments/1326873820199391243/1326873864000634942/copied-icon.png?ex=67810315&is=677fb195&hm=ec02504a1e11f01658e52f6242fa463edef669e95aab7396ef8229ed0a52b8b4&"; // Возвращаем иконку копирования
             }, 1000); // Восстанавливаем через 1 секунду
         }
 
