--- a/List/index.html
+++ b/List/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #10171e;
-            color: #d8dee9;
+            color: #ffffff;
             margin: 0;
             padding: 0;
         }
@@ -185,12 +185,12 @@
                 </div>
             </div>
             <div class="server">
-                <h2>Minecraft</h2>
-                <p>Build and explore in the endless blocky world.</p>
+                <h2>Garry's Mod</h2>
+                <p>Build and do anything what you want.</p>
                 <a href="#">Connect</a>
                 <div class="additional-buttons">
-                    <a href="#" onclick="showModal('Minecraft: An open-world sandbox game.')">Info</a>
-                    <a href="#" onclick="handleDownload('#')">Download</a>
+                    <a href="#" onclick="showModal('GMOD: An sandbox game.')">Info</a>
+                    <a href="#" onclick="handleDownload('steam://steam/install/5000')">Download</a>
                 </div>
             </div>
         </div>
