--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <header>
-        <img src="https://cdn.discordapp.com/attachments/1326873820199391243/1326873899530457098/cdb42ed5138107cb.png?ex=6781031d&is=677fb19d&hm=4347482084b0f0fd88b03a251aaf86fcc583f0718026e5ac9eb53ef47794938f&" alt="TF2 Icon" class="icon">
+        <img src="https://i.imgur.com/9yXBaIK.png" alt="TF2 Icon" class="icon">
         <h1>Сервер Team Fortress 2 от DProd LLC</h1>
     </header>
 
@@ -147,7 +147,7 @@
             <h3>Подключение к серверу</h3>
             <p><strong>IP адрес:</strong> <span id="ip-address">e1.aurorix.net:20279</span>
                 <button class="copy-btn" id="copy-btn" onclick="copyToClipboard()">
-                    <img src="https://cdn.discordapp.com/attachments/1326873820199391243/1326873864000634942/copied-icon.png?ex=67810315&is=677fb195&hm=ec02504a1e11f01658e52f6242fa463edef669e95aab7396ef8229ed0a52b8b4&" alt="Copy icon" id="copy-icon">
+                    <img src="https://i.imgur.com/vNt9nKc.png" alt="Copy icon" id="copy-icon">
                 </button>
             </p>
             <p>Чтобы присоединиться к нашему серверу, просто нажмите на кнопку ниже:</p>
@@ -185,9 +185,9 @@
 
             // Изменяем иконку на галочку
             var copyIcon = document.getElementById("copy-icon");
-            copyIcon.src = "https://cdn.discordapp.com/attachments/1326873820199391243/1326873879725080617/check-mark.png?ex=67810319&is=677fb199&hm=81c61dc4db3c5ce94d8846e7bff9f45b04b239abf0a1ee5539fd871c828a57c4&"; // Поставим галочку
+            copyIcon.src = "https://i.imgur.com/i9Inag2.png"; // Поставим галочку
             setTimeout(function() {
-                copyIcon.src = "https://cdn.discordapp.com/attachments/1326873820199391243/1326873864000634942/copied-icon.png?ex=67810315&is=677fb195&hm=ec02504a1e11f01658e52f6242fa463edef669e95aab7396ef8229ed0a52b8b4&"; // Возвращаем иконку копирования
+                copyIcon.src = "https://i.imgur.com/vNt9nKc.png"; // Возвращаем иконку копирования
             }, 1000); // Восстанавливаем через 1 секунду
         }
 
